--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ push
 0x00-personal_data/__pycache__
 0x03-user_authentication_service/*main*
 0x03-user_authentication_service/__pycache__
+0x03-user_authentication_service/a.db
